CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(boost-service-example)

EXECUTE_PROCESS( COMMAND uname -s COMMAND tr -d '\n' OUTPUT_VARIABLE OSNAME )
EXECUTE_PROCESS( COMMAND uname -m COMMAND tr -d '\n' OUTPUT_VARIABLE OSARCH )

SET(CMAKE_CXX_STANDARD 14)

ENABLE_TESTING()

INCLUDE_DIRECTORIES(
  include
  ${INCLUDE_DIRECTORIES}
)

LINK_DIRECTORIES(
  lib
  ${DESTDIR}/lib
  ${LINK_DIRECTORIES} 
  ${LIBRARY_OUTPUT_PATH}
)

SET(SERVICE_SRCS 
  app/service-main.cpp
  app/service-commandline.hpp
  app/service-logging.hpp
  app/service-configure.hpp
)

SET(FAIL_TEST_SRCS 
  test/fail-test.cpp
)

# ADD_LIBRARY(message SHARED ${MESSAGE_SRCS})

ADD_EXECUTABLE(service ${SERVICE_SRCS})

ADD_EXECUTABLE(fail-test ${FAIL_TEST_SRCS})

# TARGET_LINK_LIBRARIES(service message)

ADD_TEST(NAME fail-test COMMAND fail-test)

INSTALL(TARGETS 
    service
    CONFIGURATIONS Release
    RUNTIME DESTINATION bin PERMISSIONS WORLD_EXECUTE
    LIBRARY DESTINATION lib PERMISSIONS WORLD_EXECUTE
    ARCHIVE DESTINATION lib)
INSTALL(TARGETS
    service
    CONFIGURATIONS Debug
    RUNTIME DESTINATION bin PERMISSIONS WORLD_EXECUTE
    LIBRARY DESTINATION lib PERMISSIONS WORLD_EXECUTE
    ARCHIVE DESTINATION lib)

INSTALL(FILES include/message.hpp DESTINATION include
    CONFIGURATIONS Release)
    
ADD_DEFINITIONS(-D_AFXDLL)
ADD_DEFINITIONS(-D_MBCS)
ADD_DEFINITIONS(-D_WIN32_WINNT=_WIN32_WINNT_WIN10)
ADD_DEFINITIONS(-D_WINDLL)

